# certification-tool-backend

./: .coveragerc  .dockerignore  .env  .flake8  .gitignore  .gitmodules  .isort.cfg  .version_information  Dockerfile  README.md  alembic.ini  backend.dockerfile  cli.sh  config.json.example  cspell.json  custom_python  custom_yaml  default_config.properties  default_test_environment.config  docker-compose.override.yml  docker-compose.yml  internal-prestart.sh  mypy.ini  prestart.sh  pyproject.toml  pytest.ini  tests-start.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: python-lint.yml  spell-check.yml  unittests.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 0024bacf3969_adding_count_on_metadata_to_support_.py  028ec0c3c704_add_project_config.py  079b491a5069_enable_description_attribute.py  079dfe8e3e03_make_testrunconfig_optional.py  0a251edfd975_adding_count_on_metadata_to_support_.py  136e7b39e9e8_rename_selected_test_cases.py  3189c039e59b_removing_unnecessary_testrunconfig.py  31f2da69d8c4_add_errors_to_testcases_and_testsuites.py  4183bcf568f2_remove_user_and_item.py  489ef0771cbe_adding_pics_json_to_project.py  4b5532b0ac1e_remove_unused_project_settings.py  585a78b2ebb8_adding_count_on_metadata_to_support_.py  5ad169ab8749_upgrade_to_sqlalchemy2_0.py  621cc7fec168_added_thread_project_config.py  6494682dab86_make_project_mandatory_for_.py  66f5fdf75be8_added_archive_support_project_.py  72989eaa90f6_added_test_run_config.py  804ecda3d5bf_adding_count_on_metadata_to_support_.py  8ad40d9f3ac1_added_test_execution_models.py  94d307a738ba_added_log_to_run.py  96ee37627a48_adding_the_new_column_collection_id.py  9996326cbd1d_import_export_feature.py  9df8004ad9bb_migrate_python_test_legacy_suite_.py  b173743bd652_added_test_metadata.py  bb6834e4a8ad_add_test_collection_execution.py  d125c14ea922_add_project.py  d4867f3a4c0a_first_revision.py  e2c185af1226_pics_v2_support.py  f5af3855be39_add_operator.py  fe974049e7ad_merge_heads.py  ff250c32cf31_adding_failure_column_to_test_step_.py
app/: __init__.py  backend_pre_start.py  celeryworker_pre_start.py  client.py  config.py  default_environment_config.py  initial_data.py  log.py  log_utils.py  main.py  pics_applicable_test_cases.py  singleton.py  socket_connection_manager.py  utils.py  utils_db.py  version.py
app/api/: __init__.py
app/api_lib_autogen/: __init__.py  api_client.py  models.py
app/chip_tool/: chip_tool.py  exec_run_in_container.py  test_case.py  test_suite.py
app/commands/: __init__.py  available_tests.py  project.py  run_tests.py  run_tests_cli.py  test_run_execution_history.py  test_runner_status.py  version.py  versions.py
app/constants/: shared_constants.py  websockets_constants.py
app/container_manager/: __init__.py  backend_container.py  container_manager.py  docker_shell_commands.py
app/core/: config.py
app/crud/: __init__.py  base.py  crud_operator.py  crud_project.py  crud_test_case_execution.py  crud_test_case_metadata.py  crud_test_collection_execution.py  crud_test_collection_metadata.py  crud_test_run_config.py  crud_test_run_execution.py  crud_test_step_execution.py  crud_test_suite_execution.py  crud_test_suite_metadata.py
app/db/: base.py  base_class.py  init_db.py  pydantic_data_type.py  session.py
app/models/: __init__.py  operator.py  project.py  test_case_execution.py  test_case_metadata.py  test_collection_execution.py  test_collection_metadata.py  test_enums.py  test_run_config.py  test_run_execution.py  test_step_execution.py  test_suite_execution.py  test_suite_metadata.py
app/otbr_manager/: otbr_manager.py
app/pics/: pics_parser.py
app/schemas/: mock.py  (+21 more)
client_generator/: Dockerfile  LICENSE.TXT  Makefile  README.md  mypy.ini  pyproject.toml
client_generator/example/: usage_example.py
client_generator/example/client/: __init__.py  api_client.py  auth.py  exceptions.py  models.py  password_flow_client.py
client_generator/example/client/api/: pet_api.py  store_api.py  user_api.py
client_generator/example/client/docs/: ApiResponse.md  Category.md  Order.md  Pet.md  PetApi.md  StoreApi.md  Tag.md  User.md  UserApi.md
client_generator/openapi-python-templates/: README.mustache  __init__package.mustache  _dataTypeApi.mustache  _dataTypeModel.mustache  _innerReturnType.mustache  _returnType.mustache  api.mustache  api_client.mustache  configuration.mustache  model.mustache  requirements.mustache  setup.mustache  test-requirements.mustache  tox.mustache  travis.mustache
client_generator/other-templates/: auth.template  password_flow_client.template
client_generator/scripts/: generate.sh
client_generator/scripts/dev/: install.sh  regenerate-example.sh  test.sh  testcov.sh
client_generator/scripts/util/: openapi-generate.sh  postprocess-docker.sh  postprocess.sh
client_generator/tests/: conftest.py  test_auth.py  test_client.py
client_generator/tests/server_app/: __init__.py  __main__.py  app.py  models.py
client_generator/tests/server_app/routers/: __init__.py  auth.py  client.py
docs/: Changing-the-backend-data-model.adoc  Developing-in-VSCode.md  Updating-CHIP-Tool-SDK.adoc
gunicorn/: gunicorn_conf.py  start-reload.sh  start.sh
jupyter/: processing_log.ipynb
scripts/: build-docker-image.sh  check_deps.py  fetch_sdk_tests_and_runner.sh  fetch_sdk_yaml_tests_and_runner.sh  format-imports.sh  format.sh  generate_client.sh  install-pi-deps.sh  lint.sh  pull-chip-tool-image.sh  reset_db.py  test-cov-html.sh  test-docker.sh  test-local.sh  th_cli_install.sh
sdk_patch/: TestHarnessSDKChanges.patch
test_collections/: platform-test.json
th_cli/: async_cmd.py  client.py  colorize.py  config.py  exceptions.py  main.py  utils.py  validation.py
(+459 files in other folders)
