
 #
 # Copyright (c) 2023 Project CHIP Authors
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
 #
 # http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
[tool.poetry]
name = "certification-tool-cli"
version = "0.1.0"
description = "A CLI tool for accessing CHIP Test Harness"

authors = []

readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
httpx = ">=0.15.4,<0.19.0"
attrs = ">=20.1.0,<22.0.0"
python-dateutil = "^2.8.0"
websockets = "^10.0"
click = "^8.0.1"
pydantic = "^1.4"
types-click = "^7.1.5"
fastapi = "^0.68.1"
loguru = "^0.5.3"
aioconsole = "^0.3.2"
PyYAML = "^6.0.1"


[tool.poetry.dev-dependencies]
mypy = "^1.2.0"
black = "^22.3.0"
isort = "^5.12.0"
autoflake = "^2.1.1"
flake8 = "^6.0.0"
types-python-dateutil = "^2.8.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
exclude = '''
/(
  | .git
  | __pycache__
  | __init__.py
  | .mypy_cache
  | .pytest_cache
  | .venv
  | client_generator
)/
'''

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
